--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,15 @@
     }
   ],
   "require": {
-    "php": "^8.2.0"
+    "php": "^8.2.0",
+    "ext-mongo": "*",
+    "mongodb/mongodb": "^1.15",
+    "psr/simple-cache": "^3.0"
   },
   "require-dev": {
     "laravel/pint": "^1.8",
+    "mockery/mockery": "^1.6",
     "pestphp/pest": "^2.5.0",
-    "phpstan/phpstan": "^1.10.13",
     "rector/rector": "^0.15.24",
     "symfony/var-dumper": "^6.2.8"
   },
@@ -49,12 +52,10 @@
     "lint": "pint",
     "test:refacto": "rector --dry-run",
     "test:lint": "pint --test",
-    "test:types": "phpstan analyse --ansi",
     "test:unit": "pest --colors=always",
-    "test": [
+    "ci": [
       "@test:refacto",
       "@test:lint",
-      "@test:types",
       "@test:unit"
     ]
   }
