--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     command: --replSet rs0
     volumes:
       - ./migrations/mongo:/migrations
+      - ./.docker/mongo:/usr/scripts
     ports:
       - '27017:27017'
     restart: on-failure
